# rec

./: Cargo.toml
src/: crud_sync.rs  lib.rs  model.rs  timer.rs
src/model/: department.rs  employee.rs  machine.rs  name.rs  note.rs  permissions.rs  problem.rs  relations.rs  shift.rs  shift_problem.rs  spare_part.rs
