[package]
name = "rec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"
chrono = { version = "^0.4", features = ["serde"] }
sqlx = { version = "^0.6", features = [ "runtime-actix-native-tls", "chrono", "uuid", "json" ] }
uuid = { version = "^1", features = ["serde","v4"] }
strum = "0.24.1"
strum_macros = "0.24.3"
